--- a/faq-accordion-card-main/scss/main.scss
+++ b/faq-accordion-card-main/scss/main.scss
@@ -1,5 +1,193 @@
 @import "config";
+@import "function";
 
 body {
   font-family: "Kumbh Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: weight(regular);
+  color: $text-color-neutral;
+  line-height: 1.5;
+  background: linear-gradient(to bottom, $bg-color-violet, $bg-color-blue);
+  min-height: 100vh;
+
+  @include mediaQuery(900px) {
+    font-size: 0.75rem;
+  }
+}
+
+main {
+  min-height: 95vh;
+  padding: 10em 3em 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include mediaQuery(900px) {
+    padding: 0 5em;
+  }
+}
+
+.card {
+  position: relative;
+  background-color: #fff;
+  border-radius: 2em;
+
+  &__title {
+    margin-top: 120px;
+    text-align: center;
+    font-weight: weight(bold);
+    color: $text-color-primary;
+
+    @include mediaQuery(680px) {
+      margin-top: 180px;
+    }
+  }
+
+  @include mediaQuery(900px) {
+    max-width: 800px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    &__title {
+      margin: 0;
+      text-align: left;
+    }
+  }
+}
+
+.card-header {
+  position: relative;
+
+  &__top-desktop,
+  &__side-desktop,
+  &__bg {
+    display: none;
+  }
+
+  &__top,
+  &__bottom {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    // max-width: 300px;
+  }
+
+  &__top {
+    transform: translate(-50%, -60%);
+  }
+
+  &__bottom {
+    transform: translateX(-50%);
+
+    @include mediaQuery(650px) {
+      transform: translate(-50%, 20%);
+      width: 45%;
+    }
+  }
+
+  @include mediaQuery(900px) {
+    overflow: hidden;
+
+    .card-header {
+      overflow-x: hidden;
+    }
+
+    &__top-desktop,
+    &__side-desktop,
+    &__bg {
+      display: unset;
+      position: absolute;
+      left: 0;
+      top: 50%;
+    }
+
+    &__bg {
+      transform: translate(-20%, -40%);
+    }
+
+    &__top-desktop {
+      transform: translate(-20%, -50%);
+    }
+
+    &__side-desktop {
+      z-index: 2;
+      transform: translate(-50%, -23%);
+    }
+
+    &__top,
+    &__bottom {
+      display: none;
+    }
+  }
+}
+
+.card-questions {
+  position: relative;
+  width: 100%;
+  color: $text-color-neutral-accent;
+  padding: 1em 2em;
+
+  @include mediaQuery(900px) {
+    padding: 3em;
+  }
+}
+
+.card-question {
+  border-bottom: 2px solid $divider-color;
+  overflow: hidden;
+
+  &__summary {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5em 0;
+    cursor: pointer;
+
+    &:hover {
+      color: $text-color-primary-accent;
+    }
+
+    & img {
+      @include animate(transform, 200ms);
+    }
+  }
+
+  &__answer {
+    visibility: hidden;
+    height: 0;
+    @include animate(all, 250ms);
+  }
+}
+
+input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked ~ label > img {
+  transform: rotate(-180deg);
+}
+
+input[type="checkbox"]:checked ~ label > p {
+  color: $text-color-primary;
+  font-weight: weight(bold);
+}
+
+input[type="checkbox"]:checked ~ p {
+  visibility: visible;
+  height: auto;
+  padding-bottom: 1em;
+}
+
+.attribution {
+  position: relative;
+  text-align: center;
+  bottom: 0;
+  font-size: 11px;
+  text-align: center;
+  color: #333;
+
+  a {
+    color: #111;
+  }
 }
